# attendance-control-backend

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  README.pt-br.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: init_data.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0b129d078bf3_create_all_tables.py  4d00542b3367_create_all_tables.py  526c36bf69f0_create_all_tables.py  64e3ded1dbc7_create_all_tables.py  722338571b73_create_all_tables.py  7d76089a9767_add_timezone_in_app_config.py  b11bf163b686_create_all_tables.py  c4bc8a130717_create_all_tables.py  c5b434c5cc1b_add_timestamp.py
app/api/app_config/: crud.py  routes.py  schemas.py
app/api/attendances/: __init__.py  crud.py  routes.py  schemas.py
app/api/core/: config.py  crud.py  db.py  exceptions.py  models.py  schemas.py
app/api/records/: crud.py  deps.py  routes.py  schemas.py
app/api/shifts/: crud.py  routes.py  schemas.py
app/api/users/: crud.py  deps.py  routes.py  schemas.py  service.py
app/core/: config.py  crud.py  db.py  dependencies.py  deps.py  exceptions.py  models.py  schemas.py  security.py  service.py  utils.py
app/tests/: conftest.py  test_app_config.py  test_attendances.py  test_root.py  test_shifts.py  test_users.py  utils.py
hooks/: gitmoji.py
scripts/: gen_migration.sh  prestart.sh  start.sh  test.sh
